cloud_assets/cloud_templates/ServiceAPI_service.yaml
apiVersion: v1
kind: Service
metadata:
  # Name of the service
  name: "<VAR_SERVICE_NAME>"

  # Namespace where the service will be created
  namespace: "<VAR_GKE_NAMESPACE>"

spec:
  # Type of service, in this case, a LoadBalancer
  type: LoadBalancer

  # Static IP address for the LoadBalancer
  loadBalancerIP: "<VAR_STATIC_IP>"

  selector:
    # Selector to match the pods that this service will route traffic to
    app: "<VAR_APP_NAME>"

  ports:
    - protocol: TCP
      # Port on which the service will be exposed
      port: 80

      # Port on the container that the traffic will be forwarded to
      targetPort: 8080
